syntax = "proto3";

package hydra.v1;

import "dev/restate/sdk/go.proto";

option go_package = "github.com/unkeyed/unkey/gen/proto/hydra/v1;hydrav1";

// DeploymentService manages desired-state transitions for a single deployment
// as a Restate virtual object keyed by deployment ID. The virtual object key
// guarantees that only one state change operation executes per deployment at a
// time, preventing conflicting concurrent transitions.
//
// State transitions use last-writer-wins semantics: calling
// ScheduleDesiredStateChange while a previous transition is still pending
// overwrites it. This is implemented via a nonce — each schedule generates a
// unique nonce stored in Restate state, and ChangeDesiredState silently no-ops
// if its nonce doesn't match the stored one, meaning the transition was
// superseded by a newer schedule.
//
// Typical flow:
//   1. Caller invokes ScheduleDesiredStateChange with a target state and a
//      relative delay in milliseconds for when the change should take effect.
//   2. The handler stores the transition record and sends a delayed
//      ChangeDesiredState call to itself.
//   3. When the delay elapses, ChangeDesiredState verifies the nonce still
//      matches and persists the new desired state to the database.
service DeploymentService {
  option (dev.restate.sdk.go.service_type) = VIRTUAL_OBJECT;

  // ScheduleDesiredStateChange registers a future desired-state transition for
  // this deployment. It generates a nonce, stores a transition record in Restate
  // state, and sends a delayed ChangeDesiredState call to itself after the
  // requested delay. Calling this again before the previous transition fires
  // replaces it (last-writer-wins via nonce).
  rpc ScheduleDesiredStateChange(ScheduleDesiredStateChangeRequest) returns (ScheduleDesiredStateChangeResponse) {}

  // ChangeDesiredState is an internal handler invoked by the delayed call from
  // ScheduleDesiredStateChange. It verifies the nonce matches the stored
  // transition record — if it doesn't, the transition was superseded and the
  // call no-ops. On match, it persists the new desired state to the database.
  // The deployment ID is derived from the virtual object key.
  rpc ChangeDesiredState(ChangeDesiredStateRequest) returns (ChangeDesiredStateResponse) {}

  // ClearScheduledStateChanges removes the pending transition record from
  // Restate state, effectively cancelling any scheduled ChangeDesiredState
  // call. The delayed call may still fire, but it will no-op because
  // ChangeDesiredState requires a stored transition to exist.
  rpc ClearScheduledStateChanges(ClearScheduledStateChangesRequest) returns (ClearScheduledStateChangesResponse) {}
}

message ClearScheduledStateChangesRequest {}
message ClearScheduledStateChangesResponse {}

// DeploymentDesiredState represents the target lifecycle state for a deployment.
// UNSPECIFIED is treated as an error and causes a terminal failure in
// ChangeDesiredState.
enum DeploymentDesiredState {
  DEPLOYMENT_DESIRED_STATE_UNSPECIFIED = 0;

  // RUNNING means the deployment should have active containers serving traffic.
  DEPLOYMENT_DESIRED_STATE_RUNNING = 1;

  // STANDBY means the deployment's containers are scaled down but the
  // deployment can be resumed without a full rebuild.
  DEPLOYMENT_DESIRED_STATE_STANDBY = 2;

  // ARCHIVED means the deployment is permanently decommissioned.
  DEPLOYMENT_DESIRED_STATE_ARCHIVED = 3;
}

message ScheduleDesiredStateChangeRequest {
  // Relative delay in milliseconds before the state change should take effect.
  // Set to 0 to execute immediately.
  int64 delay_millis = 1;

  DeploymentDesiredState state = 2;
}

message ScheduleDesiredStateChangeResponse {}

// ChangeDesiredStateRequest is sent internally by ScheduleDesiredStateChange
// via a delayed Restate call. Callers should not invoke this directly.
message ChangeDesiredStateRequest {
  // Nonce generated by the originating ScheduleDesiredStateChange call. Used
  // to implement last-writer-wins: if this nonce doesn't match the stored
  // transition record, the call is a stale superseded transition and no-ops.
  string nonce = 1;

  DeploymentDesiredState state = 2;
}

message ChangeDesiredStateResponse {}
